...
    <string name="QUIZ_URL" translatable="false"><![CDATA[http://quizzical.canadacentral.cloudapp.azure.com/quiz?classCode=%d&quizCode=%d]]></string>
    <string name="QUIZ_NUM_SCORE" translatable="false">quiz%sscore</string>
    <string name="TYPE" translatable="false">type=</string>

    <string name="app_name" translatable="false">quizzical</string>
    <string name="YES">yes</string>
    <string name="NO">no</string>

    <string name="curr_login_user" translatable="false">currLoginUser</string>
    <string name="LOGGED" translatable="false">logged</string>

    <string name="Continue_text">Continue</string>

    <!--    set an untranslatable version of username for server communication-->
    <string name="USER_INFO" translatable="false">userInfo</string>
    <string name="UID" translatable="false">userId</string>
    <string name="USERNAME" translatable="false">username</string>
    <string name="EMAIL" translatable="false">Email</string>
    <string name="PROFILE_IMG" translatable="false">profileImage</string>
    <string name="EXP" translatable="false">EXP</string>
    <string name="USER_QUIZ_COUNT" translatable="false">userQuizCount</string>
    <string name="FIREBASE_TOKEN" translatable="false">firebaseToken</string>
    <string name="NOTIFICATION_FREQ" translatable="false">notificationFrequency</string>

    <string name="TRUE" translatable="false">True</string>
    <string name="FALSE" translatable="false">False</string>
    <string name="OK" translatable="false">OK</string>

    <string name="IS_INSTRUCTOR" translatable="false">isInstructor</string>
    <string name="INSTRUCTOR_UID" translatable="false">instructorUID</string>

    <string name="CREATE_CLASS" translatable="false">createClass</string>
    <string name="JOIN_CLASS" translatable="false">joinClass</string>
...
    <!--    init_activity-->
    <string name="UI_welcome_str">Welcome to Quizzical</string>

    <!--    this is the default username to be shown in the app-->
    <string name="UI_username">Username</string>
    <string name="UI_username_msg">Please enter a user name</string>
    <string name="UI_example_username" translatable="false">E.g. Valhalla</string>
    <string name="UI_username_invalid_msg">Username invalid: 3–15 characters with a–z,A–Z,0–9 and _ allowed.</string>

    <string name="UI_email_msg">Please enter your email address</string>
    <string name="UI_example_email" translatable="false">E.g. abc@example.com</string>
    <string name="UI_prompt_for_valid_email">Please enter a valid email</string>
    <string name="UI_email_invalid_msg">email invalid</string>

    <string name="UI_is_instructor_msg">Are you an instructor?</string>

    <string name="UI_require_valid_username_email_msg">Please enter valid username and email</string>

    <!--    used for home activity-->
    <string name="UI_quizzes">Quizzes</string>
    <string name="UI_class_statistics">Class Statistics</string>
    <string name="UI_leader_board">LeaderBoard</string>
    <string name="UI_profile">Profile</string>

    <string name="UI_example_course_code" translatable="false">E.g. 123456</string>
    <string name="UI_invalid_class_code_msg">Invalid class code</string>
    <string name="UI_enter_class_code_msg">Please enter your class code</string>
    <string name="UI_class_joined_msg">You have joined the class</string>
    <string name="UI_class_joined_already_msg">You have already joined the class</string>
...
    <string name="UI_enter_class_name_msg">Please enter class name</string>
    <string name="UI_example_class_name" translatable="false">E.g. Grade_10_math_class_A</string>
    <string name="UI_class_name_invalid_msg">Class name invalid</string>
    <string name="UI_create_class_success_title">You just created a new class</string>
    <string name="UI_create_class_success_msg">Your new class code is %d. You will also get an email containing the code. Please share it with your students.</string>

    <string name="UI_warning">Warning</string>
    <string name="UI_teacher_delete_course">Do you want to delete this course for everyone?</string>
    <string name="UI_student_delete_course">Do you want to quit this course?</string>

    <!--    used in quiz fragment-->
    <string name="UI_no_data">No data.</string>
    <string name="go_to_quiz">Go to Quiz</string>
    <string name="UI_default_module_text">module 1</string>
    <string name="UI_wrong_questions">Wrong Questions</string>
    <string name="UI_stats">stats</string>
    <string name="UI_notes">notes</string>
    <string name="UI_personal_score_string">your score: %.2f</string>
    <string name="UI_highest_score_text">highest: %.2f</string>
    <string name="UI_average_score_text">Average: %.2f</string>

    <string name="UI_create_new_module">Create new module</string>
...
    <string name="UI_create_answer">Add Answer</string>
    <string name="UI_delete">Delete</string>
    <string name="UI_quit_quiz_editing_warning">Do you want to discard the quiz editing? Note that all your progress will be lost!</string>

    <!--    used in leader board fragment (for students)-->
    <string name="leader_board_page_text1" translatable="false">This is the Leaderboard page</string>
    <string name="UI_teachers_leaderboard">Teacher\'s Leaderboard</string>
    <string name="UI_leaderboard_number" translatable="false">#</string>
    <string name="UI_leaderboard_score">Score</string>
    <string name="UI_back_to_statistics">Back to Statistics</string>
    <string name="UI_current_class_name">Current class name: %s</string>

    <!--    used in profile fragment-->
    <string name="UI_change_profile_image_msg">Do you want to change the profile image?</string>
    <string name="UI_change_username">change username</string>
    <string name="UI_change_email">change email</string>
    <string name="UI_statistics">Statistics</string>
    <string name="UI_quiz_taken">Quiz taken: %d</string>
    <string name="UI_quiz_made">Quiz made: %d</string>
    <string name="UI_total_exp">Total EXP: %d</string>
    <string name="UI_course_taken">Course taken:</string>
    <string name="UI_course_created">Course created:</string>
    <string name="UI_log_out">Log out</string>
    <string name="UI_push_notification">Push notification</string>
    <string name="UI_logout_msg">Do you want to log out?</string>

    <string-array name="notification_frequency">
        <item>Never</item>
        <item>Daily</item>
...
    <!--    used in quiz activity-->
    <string name="UI_error_generating_quiz_page_msg">An error occurred, press next to continue</string>
    <string name="UI_question">Question</string>
    <string name="UI_next">Next Question</string>
    <string name="UI_error_loading_pic_msg">Error loading picture</string>
    <string name="UI_quiz_pic_msg">You may need to scroll down to see the picture</string>
    <string name="UI_submit">Submit</string>
    <string name="UI_finish">Finish</string>
    <string name="UI_no_answer_response_msg">Please answer the question before submission.</string>

    <string name="UI_in_quiz_correct_msg">You are correct. You got %d/%d correct.</string>
    <string name="UI_in_quiz_wrong_msg">You are wrong. You got %d/%d correct.</string>

...
