<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_refresh_layout"
    tools:context=".mainmenufragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/profile_image_shape"
            android:contentDescription="@string/PROFILE_IMG" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableRow>

                <TextView
                    android:id="@+id/profile_username"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/UI_username"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/profile_username_change_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:contentDescription="@string/UI_change_username"
                    app:srcCompat="@drawable/ic_baseline_edit_24" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/UI_example_email"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/profile_email_change_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:contentDescription="@string/UI_change_email"
                    app:srcCompat="@drawable/ic_baseline_edit_24" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/UI_push_notification"
                    android:textSize="15sp"
                    android:layout_gravity="center" />

                <Spinner
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/notification_settings" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UI_statistics"
                    android:textSize="20sp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/UI_course_taken"
                    android:textSize="15sp"/>
            </TableRow>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/profile_class_layout">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_rect_border"
                        android:gravity="center"
                        android:text="@string/UI_current_class_name"
                        android:textSize="15sp"/>
                </LinearLayout>
            </HorizontalScrollView>

            <TableRow>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/textview_rect_border"
                    android:text="@string/UI_quiz_taken"
                    android:id="@+id/profile_quiz_num_text"
                    android:gravity="center"
                    android:textSize="15sp"
                    />
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/textview_rect_border"
                    android:gravity="center"
                    android:id="@+id/profile_exp_text"
                    android:text="@string/UI_total_exp"
                    android:textSize="15sp"/>
            </TableRow>
        </TableLayout>


        <Button
            android:id="@+id/profile_log_out_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_corner_button"
            android:text="@string/UI_log_out" />
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>